--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-   
-    <link rel="canonical" href="xxxx" />
-    <link rel="alternate" href="xxxx" hreflang="id-ID" />
+    <meta name="google-site-verification" content="SgX4IIqNN6HDybQHoVhybdMD2NrPfqn-JcVPkHsW0Ig" />
+    <link rel="canonical" href="https://dessy-go.github.io/News/" />
+    <link rel="alternate" href="https://dessy-go.github.io/News/" hreflang="id-ID" />
     <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/wJF8dqX/elangwon1.png" />
     <link rel="apple-touch-icon" href="https://i.ibb.co/wJF8dqX/elangwon1.png" />
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/wJF8dqX/elangwon1.png" />
@@ -36,7 +36,7 @@
     <!-- Facebook -->
     <meta property="og:title" content="Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways" />
     <meta property="og:description" content="Rasakan sensasi Situs Anti Rungkad 2025 di ELANGWON! Pola paling ampuh yang membuat bandar tak berkutik" />
-    <meta property="og:url" content="xxxx" />
+    <meta property="og:url" content="https://dessy-go.github.io/News/" />
     <meta property="og:image" content="https://i.ibb.co/wpPTd13/EEAA.png" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:site_name" content="ELANGWON" />
@@ -74,7 +74,7 @@
         "@type": "Organization",
         "name": "ELANGWON",
         "alternateName": "Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways",
-        "url": "xxxx",
+        "url": "https://dessy-go.github.io/News/",
         "logo": "https://i.ibb.co/wJF8dqX/elangwon1.png"
       }
     </script>
@@ -86,12 +86,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "xxxx"
+          "item": "https://dessy-go.github.io/News/"
         }, {
           "@type": "ListItem",
           "position": 2,
           "name": "ELANGWON",
-          "item": "xxxx"
+          "item": "https://dessy-go.github.io/News/"
         }]
       }
     </script>
@@ -101,7 +101,7 @@
         "@type": "NewsArticle",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "xxxx"
+          "@id": "https://dessy-go.github.io/News/"
         },
         "headline": "Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways",
         "description": "Rasakan sensasi Situs Anti Rungkad 2025 di ELANGWON! Pola paling ampuh yang membuat bandar tak berkutik",
@@ -109,7 +109,7 @@
         "author": {
           "@type": "Organization",
           "name": "ELANGWON",
-          "url": "xxxx"
+          "url": "https://dessy-go.github.io/News/"
         },
         "publisher": {
           "@type": "Organization",
