--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="apple-touch-icon" href="https://i.ibb.co/wJF8dqX/elangwon1.png" />
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/wJF8dqX/elangwon1.png" />
     <!-- Website -->
-    <title>Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways</title>
+    <title>ELANGWON ⚡ Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways</title>
     <meta name="description" content="Rasakan sensasi Situs Anti Rungkad 2025 di ELANGWON! Pola paling ampuh yang membuat bandar tak berkutik" />
-    <meta name="keywords" content="Elangwon" />
+    <meta name="keywords" content="Elangwon, Elangwon slot, Elangwon login, Elangwon daftar, Elangwon link alternatif, Elangwon rtp" />
     <meta name="categories" content="website" />
     <meta name="language" content="id-ID" />
     <meta name="rating" content="general" />
@@ -34,7 +34,7 @@
     <meta name="page google.com" content="https://www.google.com/search?q=ELANGWON">
   <meta name="page google.co.id" content="https://www.google.co.id/search?q=ELANGWON">
     <!-- Facebook -->
-    <meta property="og:title" content="Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways" />
+    <meta property="og:title" content="ELANGWON ⚡ Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways" />
     <meta property="og:description" content="Rasakan sensasi Situs Anti Rungkad 2025 di ELANGWON! Pola paling ampuh yang membuat bandar tak berkutik" />
     <meta property="og:url" content="https://dessy-go.github.io/News/" />
     <meta property="og:image" content="https://i.ibb.co/wpPTd13/EEAA.png" />
@@ -44,7 +44,7 @@
     <meta property="og:type" content="website" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways" />
+    <meta name="twitter:title" content="ELANGWON ⚡ Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways" />
     <meta name="twitter:description" content="Rasakan sensasi Situs Anti Rungkad 2025 di ELANGWON! Pola paling ampuh yang membuat bandar tak berkutik" />
     <meta name="twitter:url" content="$url" />
     <meta name="twitter:image" content="https://i.ibb.co/wpPTd13/EEAA.png" />
@@ -73,7 +73,7 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "ELANGWON",
-        "alternateName": "Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways",
+        "alternateName": "ELANGWON ⚡ Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways",
         "url": "https://dessy-go.github.io/News/",
         "logo": "https://i.ibb.co/wJF8dqX/elangwon1.png"
       }
@@ -103,7 +103,7 @@
           "@type": "WebPage",
           "@id": "https://dessy-go.github.io/News/"
         },
-        "headline": "Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways",
+        "headline": "ELANGWON ⚡ Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways",
         "description": "Rasakan sensasi Situs Anti Rungkad 2025 di ELANGWON! Pola paling ampuh yang membuat bandar tak berkutik",
     "image": ["https://i.ibb.co/wpPTd13/EEAA.png"],
         "author": {
@@ -189,7 +189,7 @@
     <section class='n-container m-b-normal'>
       <article class='bg-container contain'>
         <div class='article'>
-          <h1 class="text-center" itemprop="headline"><strong>Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways</strong></h1>
+          <h1 class="text-center" itemprop="headline"><strong>ELANGWON ⚡ Mahjong Ways Mengubah Nasib: Kisah Seorang Petani Cangkul Sukses Bermain Games Mahjong Ways</strong></h1>
           <p>Pada tahun 2025, dunia taruhan online sedang ramai, dan satu nama yang bersinar terang adalah ELANGWON . Dikenal karena fitur anti-runggad -nya , platform ini menawarkan pemain kesempatan untuk menang berkali-kali dengan menggunakan strategi pola paling ampuh . Namun, apa sebenarnya maksud semua ini? Mari selami dunia ELANGWON dan jelajahi bagaimana Anda dapat memanfaatkan strateginya untuk menang secara konsisten!</p>
           <h2>Apa itu Anti Rungkad?</h2>
           <p>Dalam dunia taruhan daring, rungkad merujuk pada kondisi kekalahan terus-menerus atau nasib buruk yang dialami beberapa pemain, sering kali karena strategi yang buruk atau pola yang tidak beruntung. Hal ini dapat membuat frustrasi dan membuat pemain menyerah. Namun, sistem anti rungkad bertujuan untuk melindungi pemain agar tidak mengalami kekalahan beruntun ini. Sistem ELANGWON memastikan bahwa pemain dapat menghindari kekalahan yang tidak diinginkan tersebut, dengan menyediakan strategi dan pola yang membantu Anda terus menang.</p>
